--- a/Parabola+DB/Views/Web.config
+++ b/Parabola+DB/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="Parabola_DB" />
+        <add namespace="ParabolaDB" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
